--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
   <script src="js/jquery.easypiechart.js"></script>
   <script src="js/jquery.shuffle.min.js"></script>
   <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="https://a.vimeocdn.com/js/froogaloop2.min.js"></script>
+  <!-- <script src="https://a.vimeocdn.com/js/froogaloop2.min.js"></script> -->
   <script src="js/jquery.fitvids.js"></script>
   <script src="js/scripts.js"></script>
 </body>
